# 2048-AI

./: .gitignore  Makefile.am  README  README.md  configure  configure.ac
src/: 2048.c  Makefile.am  constants.h  log.h  main.c
src/ai/: ai.c  ai.h  board_pool.c  board_pool.h  evaluator.c  evaluator.h  expectimax.c  expectimax.h  list.c  list.h  minmax.c  minmax.h  tree.h
src/ai/utils/: hash.c  hash.h  thread_pool.c  thread_pool.h  tree.c
src/controllers/: input.c  input.h
src/models/: board.c  board.h  calculator.c  calculator.h  game.c  game.h  random.c  random.h
src/tests/: Makefile.am  test.c
src/views/: output.c  output.h
